--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-redux-firebase": "^3.11.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-firestore": "^1.0.0",
     "sass": "^1.51.0",
