--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "link",
   "version": "0.1.0",
   "private": true,
+  "homepage": "localhost:3000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,7 +16,6 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-redux-firebase": "^3.11.0",
