--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
+    "fuse.js": "^6.6.2",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-redux-firebase": "^3.11.0",
