--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
